--- a/app/views/api_directory/_item.html.erb
+++ b/app/views/api_directory/_item.html.erb
@@ -1,7 +1,7 @@
 <div class="col-xs-4 col-sm-2" style='margin-bottom: 30px;'>
   <div class="section">
     <div class="pic" style='height: 155px'>
-      <%= link_to directory_path(item.slug) do %>
+      <%= link_to api_directory_path(item.slug) do %>
         <img src='<%= "#{ENV['S3']}#{item.slug}.png" %>' width= "100" class='img-responsive' alt='<%= item.name %>'>
           <div class='text-center'>
             <%= item.name %>
