--- a/app/views/api_directory/show.html.erb
+++ b/app/views/api_directory/show.html.erb
@@ -6,7 +6,7 @@
     <img src='<%= "#{ENV['S3']}#{@item.slug}.png" %>', width= "102", class='img-responsive', alt='<%= @item.name %>' >
     <h3><%= title %></h3>
     <br/>
-    <%= link_to 'Back', '/directory' %>
+    <%= link_to 'Back', '/api_directory' %>
   </div>
   <div class='col-sm-8'>
     
@@ -25,7 +25,6 @@
       </p>
     <% end %>
 
-
     <% if @item.api_provider.present? %>
       <p>
         <strong>API Provider:</strong>
@@ -37,7 +36,7 @@
       <p>
         <strong>Primary Category:</strong>
         <%= @item.primary_category %>
-    </p>
+      </p>
     <% end %>
 
   </div>
