--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
       <ul>
         <li><%= link_to 'Data Integration', hub_path, :class => 'item' %></li>
         <li><%= link_to 'ERP & CRM', "#{root_path}#services", :class => 'item' %></li>
-        <li><%= link_to 'API Directory', '/directory', :class => 'item' %></li>
+        <li><%= link_to 'API Directory', '/api_directory', :class => 'item' %></li>
         <li><%= link_to 'Pricing', "#{root_path}#pricing", :class => 'item' %></li>
         <li><%= link_to 'Docs',ENV['DOC_URL'], :class => 'item' %></li>  
       </ul>
