--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -2,10 +2,16 @@
   <div class="container">
 
     <div class="row header">
-      <h3>Need an easy way to connect your business with <%= link_to 'Public APIs', '/directory' %>?</h3>
+      <h3>Need an easy way to connect your business with <%= link_to 'Public APIs', '/api_directory' %>?</h3>
       <p>
         CenitSaaS is the perfect tool to help you out.
       </p>
+      <br/>
+      <div class='col-md-offset-2 col-md-8 centered'>
+        <%= form_tag('/api_directory', method: :get) do %>
+          <%= text_field_tag "name", @name, placeholder: "Search 700+ APIs",  class: "form-control" %>
+        <% end %>
+      </div>
     </div>
 
     <div class="row sections">
