change api directory by directory

--- a/app/views/directory/index.html.erb
+++ b/app/views/directory/index.html.erb
@@ -1,8 +1,8 @@
-<% title = 'Public API Directory' %>
+<% title = 'Public App Directory' %>
 <%= render 'shared/page_header', title: title, home: false %>
 
 <div class='col-md-offset-4 col-md-4 centered'>
-  <%= form_tag('/api_directory', method: :get) do %>
+  <%= form_tag('/directory', method: :get) do %>
     <%= text_field_tag "name", @name, placeholder: "Search 700+ APIs",  class: "form-control" %>
   <% end %>
 </div>
