--- a/app/views/directory/show.html.erb
+++ b/app/views/directory/show.html.erb
@@ -6,7 +6,7 @@
     <img src='<%= "#{ENV['S3']}#{@item.slug}.png" %>', width= "102", class='img-responsive', alt='<%= @item.name %>' >
     <h3><%= title %></h3>
     <br/>
-    <%= link_to 'Back', '/api_directory' %>
+    <%= link_to 'Back', '/directory' %>
   </div>
   <div class='col-sm-8'>
     
