--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -8,7 +8,7 @@
       </p>
       <br/>
       <div class='col-md-offset-2 col-md-8 centered'>
-        <%= form_tag('/api_directory', method: :get) do %>
+        <%= form_tag('/directory', method: :get) do %>
           <%= text_field_tag "name", @name, placeholder: "Search 700+ APIs",  class: "form-control" %>
         <% end %>
       </div>
