--- a/app/views/directory/index.html.erb
+++ b/app/views/directory/index.html.erb
@@ -4,11 +4,32 @@
 <div class='col-md-offset-4 col-md-4 centered'>
   <%= form_tag('/directory', method: :get) do %>
     <%= text_field_tag "name", @name, placeholder: "Search 700+ APIs",  class: "form-control" %>
+    <%= hidden_field_tag("tag", @tag) if @tag.present?  %>
   <% end %>
+  <br/><br/>
 </div>
 
-<div id="grid-first">
-  <div class="container">
-    <%= render partial: 'item', collection: @items %>
+<div class="container">
+  <div id="main">
+    <div class="row">
+      <div class="col-sm-4 col-md-3">
+        <h4><b>Categories</b></h4>
+        <div class="toggle-container filters-container">
+           <div class="panel">
+            <h4 class="panel-title"><%= link_to 'All', directory_index_path %></h4>
+          </div>
+        </div>
+        <div class="toggle-container filters-container">
+          <% Tag.all.order_by(name: 'asc').each do |tag| %>
+             <div class="panel">
+              <h4 class="panel-title"><%= link_to tag.name.titleize, directory_index_path(tag: tag.name) %></h4>
+            </div>
+          <% end %>
+        </div>
+      </div>
+      <div class="col-sm-8 col-md-9">
+        <%= render partial: 'item', collection: @items %>
+      </div>
+    </div>
   </div>
 </div>
