--- a/app/views/directory/index.html.erb
+++ b/app/views/directory/index.html.erb
@@ -1,18 +1,18 @@
 <% title = 'Public App Directory' %>
 <%= render 'shared/page_header', title: title, home: false %>
 
-<div class='col-md-offset-4 col-md-4 centered'>
+<div class='col-sm-offset-4 col-md-6 col-md-4 centered'>
   <%= form_tag('/directory', method: :get) do %>
     <%= text_field_tag "name", @name, placeholder: "Search 700+ APIs",  class: "form-control" %>
     <%= hidden_field_tag("tag", @tag) if @tag.present?  %>
   <% end %>
   <br/><br/>
 </div>
-
+<div class="clearfix"></div>
 <div class="container">
   <div id="main">
     <div class="row">
-      <div class="col-sm-4 col-md-3">
+      <div class="col-sm-3">
         <h4><b>Categories</b></h4>
         <div class="toggle-container filters-container">
            <div class="panel">
@@ -27,7 +27,7 @@
           <% end %>
         </div>
       </div>
-      <div class="col-sm-8 col-md-9">
+      <div class="col-sm-9">
         <%= render partial: 'item', collection: @items %>
       </div>
     </div>
