added fee commercial transaction in the prices section

--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -9,7 +9,7 @@
     <div class="row header">
       <div class="col-md-12">
         <h3>Begin and continue free if you want</h3>
-        <p>Only pay extra space if you need</p>
+        <p>Only pay extra options if you need</p>
       </div>
     </div>
     <div class="row charts">
@@ -43,16 +43,20 @@
       
       <div class="col-md-4">
         <div class="chart featured">
-          <div class="popular">Extra space</div>
+          <div class="popular">Extra options</div>
           <div class="plan-name">Variable</div>
           <div class="specs">
             <div class="spec">
               <span class="variable"> Included </span>
-              Free options
+              free options
             </div>
             <div class="spec">
-              <span class="variable"> $10 USD x GB </span>
+              <span class="variable"> $10 x GB </span>
               over 5 GB
+            </div>
+            <div class="spec">
+              <span class="variable"> $0.5 per </span>
+              commercial transaction
             </div>
           </div>
           <a class="btn-signup button-clear" href='<%= ref %>' >
@@ -70,8 +74,16 @@
               tenants
             </div>
             <div class="spec">
-              <span class="variable">Include</span>
-              SaaS management
+              <span class="variable">SaaS</span>
+               management
+            </div>
+            <div class="spec">
+              <span class="variable">Custom</span>
+               integrations
+            </div>
+            <div class="spec">
+              <span class="variable">Development</span>
+              services
             </div>
           </div>
           <a data-toggle="modal" class="btn-signup button-clear" href="#contact_us">
