--- a/app/views/shared/_features.html.erb
+++ b/app/views/shared/_features.html.erb
@@ -33,7 +33,7 @@
         <div class="col-md-4 feature">
           <%= image_tag 'circle-icons/one-color/unlocked.png', :alt => 'mail' %>
           <strong>Free account </strong>
-          <p>Tenant without limit in use, complete access to configuration Setup and 5 GB space.</p>
+          <p>Tenant without limit in use, complete access to configuration Setup and 5 GB space. Only pay a $0.5 fee by successful commercial transactions.</p>
         </div>
         <div class="col-md-4 feature">
           <%= image_tag 'circle-icons/one-color/support.png', :alt => 'locked' %>
