added contact us to footer

--- a/app/views/directory/show.html.erb
+++ b/app/views/directory/show.html.erb
@@ -1,4 +1,4 @@
-<% title = "#{@item.name} API" %>
+<% title = @item.name %>
 <%= render 'shared/page_header', title: title, home: false %>
 
 <div class='container'>
