--- a/app/views/shared/_features.html.erb
+++ b/app/views/shared/_features.html.erb
@@ -15,7 +15,7 @@
         <div class="col-md-4 feature">
           <%= image_tag 'circle-icons/one-color/stack.png', :alt => 'creditcard' %>
           <strong>Support multiple kind of Schemas </strong>
-           <p>Does registrations with Json Schema, XSD or EDI: ASC X12, EDIFACT, etc. That allow exchange different kind of documents and validate with schemas.</p>
+           <p>Does registrations with Json Schema, XML Schema or EDI Grammar: ASC X12, EDIFACT, etc. That allow exchange different kind of documents and validate with schemas.</p>
         </div>
       
         <div class="col-md-4 feature">
