--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -6,14 +6,14 @@
          <div class="cta animated fadeIn">
           <% if user_signed_in? %>
            <% if (cenit_app = Doorkeeper::Application.where(name: 'Cenit').first).present? %>
-             <%= link_to "Data Integrator", cenithub_url(cenit_app), class: 'button' %>
+             <%= link_to "Data Integrator", cenithub_url(cenit_app), class: 'button button_hub' %>
            <% end %>
            <% if (odoo_app = Doorkeeper::Application.where(name: 'odoo').first).present? %>
-             <%= link_to "ERP & CRM", cenitodoo_url(current_user, odoo_app), class: 'button' %>
+             <%= link_to "ERP & CRM", cenitodoo_url(current_user, odoo_app), class: 'button button_erp' %>
            <% end %>
           <% else %>
-            <%= link_to 'Data Integrator', new_user_registration_path, class: 'button', id: 'button_hub_logout'  %>
-            <%= link_to 'ERP & CRM', new_user_registration_path, class: 'button', id: 'button_erp_logout' %>
+            <%= link_to 'Data Integrator', new_user_registration_path, class: 'button button_hub' %>
+            <%= link_to 'ERP & CRM', new_user_registration_path, class: 'button button_erp' %>
           <% end %>
         </div>
         
@@ -59,7 +59,7 @@
         $(".st-container").removeClass("nav-effect");
       });
       
-      $("#button_hub_logout").hover(
+      $(".button_hub").hover(
         function() {
           $( this )[0].text = 'Go to CenitHub'
         }, function() {
@@ -67,7 +67,7 @@
         }
       );
       
-      $("#button_erp_logout").hover(
+      $(".button_erp").hover(
         function() {
           $( this )[0].text = 'Go to Odoo'
         }, function() {
