--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -9,7 +9,7 @@
       <br/>
       <div class='col-md-offset-2 col-md-8 centered'>
         <%= form_tag('/directory', method: :get) do %>
-          <%= text_field_tag "name", @name, placeholder: "Search 700+ APIs",  class: "form-control" %>
+          <%= text_field_tag "name", @name, placeholder: "Search 700+ APPs",  class: "form-control" %>
         <% end %>
       </div>
     </div>
