--- a/app/views/shared/_chart.html.erb
+++ b/app/views/shared/_chart.html.erb
@@ -2,11 +2,14 @@
   <div id="tabs-option">
     <div class="container">
       <div class="row header">
-        <h3>Custom Development Services for Data Integration & Odoo Implementation </h3>
+        <h3>Development Services for Custom Business Integration</h3>
         <p>For some cases that you might also need</p>
+        <a data-toggle="modal" class="btn-signup button-clear" href="#contact_us" data-backdrop="false">
+          <span>Contact Us</span>
+        </a>
       </div>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
           <div class="tabs">
             <div class="tab monthly active">
               <span>Pay Week</span>
@@ -19,7 +22,7 @@
             </div>
           </div>
           <div class="plans clearfix">
-            <div class="plan col-md-4">
+            <div class="plan col-sm-4">
               <div class="header">
                 <span class="icon entypo-user"></span>
                 25 hours
@@ -41,7 +44,7 @@
                 <div class="spec">&nbsp;</div>
               </div>
             </div>
-            <div class="plan col-md-4 middle">
+            <div class="plan col-sm-4 middle">
               <div class="header">
                 <span class="icon entypo-users"></span>
                 50 hours
@@ -69,7 +72,7 @@
                 <div class="spec">&nbsp;</div>
               </div>
             </div>
-            <div class="plan col-md-4">
+            <div class="plan col-sm-4">
               <div class="header">
                 <span class="icon entypo-suitcase"></span>
                 100 hours
@@ -110,4 +113,5 @@
     </div>
   </div>
 </div>
+
 
