--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -86,7 +86,7 @@
               services
             </div>
           </div>
-          <a data-toggle="modal" class="btn-signup button-clear" href="#contact_us">
+          <a data-toggle="modal" class="btn-signup button-clear" href="#contact_us" data-backdrop="false">
             <span>Contact Us</span>
           </a>
         </div>
