--- a/app/views/shared/_contact_us.html.erb
+++ b/app/views/shared/_contact_us.html.erb
@@ -1,7 +1,6 @@
 <div id="contact_us" class="modal fade">
   <div class="modal-dialog">
     <div class="modal-content col-md-7">
-
       <div id="info">
         <div class="container">
           <div class="row">
@@ -9,24 +8,23 @@
               <%= form_for ContactUs::Contact.new, :url => contacts_path, :html => {:class => 'formtastic contact-form', :role=>"form", :id=>"contact-form"}  do |f| %>
                 <div class="modal-body">
                   <div class="form-group">
-                      <%= f.label :name, (t('.name') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
-                      <%= f.text_field :name, id: :name, class: "form-control" %>
+                    <%= f.label :name, (t('.from_name') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
+                    <%= f.text_field :name, id: :name, class: "form-control", placeholder: 'Enter text here' %>
+                  </div>
+                  <div class="form-group">
+                    <%= f.label :email, (t('.from_email_address') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
+                    <%= f.text_field :email, id: :email, class: 'form-control', placeholder: 'Enter text here'%>
+                  </div>
+                  <div class="form-group">
+                    <%= f.label :message, (t('.message') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
+                    <%= f.text_area :message, id: :message, class: 'form-control', rows: '6', placeholder: 'Enter text here' %>
+                  </div>
+                  <div class="submit">
+                    <div class='col-sm-6'>
+                      <br/>
+                      <%= link_to 'Cancel', '#', data: {dismiss: "modal"} %>
                     </div>
-                    <div class="form-group">
-                      <%= f.label :email, (t('.email') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
-                      <%= f.text_field :email, id: :email, class: 'form-control'%>
-                    </div>
-                    <div class="form-group">
-                      <%= f.label :message, (t('.message') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
-                      <%= f.text_area :message, id: :message, class: 'form-control', rows: '6' %>
-                    </div>
-                    <div class="submit">
-                      <input type="submit" class="button button-small" value="Send us" />
-                      <divclass="right modal-footer">
-                        <%= link_to 'Close', '#', data: {dismiss: "modal"} %>
-                      </div>
-                    </div>
-
+                    <input type="submit" class="button button-small" value="Submit" />
                   </div>
                 </div>
               <% end %>
