--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -4,12 +4,12 @@
     <div class="row header">
       <h3>Need an easy way to connect your business with <%= link_to 'Public APIs', '/directory' %>?</h3>
       <p>
-        CenitSaaS is the perfect tool to help you out.
+        CenitSaaS is the perfect tool to help you out. <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Get in touch.</a>
       </p>
       <br/>
       <div class='col-md-offset-2 col-md-8 centered'>
         <%= form_tag('/directory', method: :get) do %>
-          <%= text_field_tag "name", @name, placeholder: "Search 700+ APPs",  class: "form-control" %>
+          <%= text_field_tag "name", @name, placeholder: "Search 900+ APPs",  class: "form-control" %>
         <% end %>
       </div>
     </div>
