--- a/app/views/directory/_item.html.erb
+++ b/app/views/directory/_item.html.erb
@@ -1,7 +1,7 @@
 <div class="col-xs-4 col-sm-3" style='margin-bottom: 30px;'>
   <div class="section">
     <div class="pic" style='height: 165px;  min-width: 145px;'>
-      <%= link_to directory_path(item.slug) do %>
+      <%= link_to directory_path(item.slug), data: { no_turbolink: true } do %>
         <% if item.logo_url.present? %>
           <%= image_tag item.logo_url, alt: item.name, with: '100', class:'img-responsive', style: "max-height: 85px; background-color: #{item.logo_background_color if item.logo_background_color.present?};" %>
         <% else %>
