--- a/app/views/directory/index.html.erb
+++ b/app/views/directory/index.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/page_header', title: title, home: false %>
 
 <div class='col-sm-offset-4 col-md-6 col-md-4 centered'>
-  <%= form_tag('/directory', method: :get) do %>
+  <%= form_tag '/directory', method: :get, data: { no_turbolink: true } do %>
     <%= text_field_tag "name", @name, placeholder: "Search 900+ APPs", autocomplete: "on", class: "form-control", type: "search", data: {autocomplete: directory_autocomplete_item_name_path} %>
     <%= hidden_field_tag("tag", @tag) if @tag.present?  %>
   <% end %>
