--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
 
     <div class="navbar-header">
-      <%= link_to root_path , :class => 'navbar-brand' do %>
+      <%= link_to root_path , :class => 'navbar-brand', data: { no_turbolink: true } do %>
         <%= image_tag 'cenit-logo.png',size: "51x26" %> CenitSaaS
       <% end %>
     </div>
