--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
 
     <div class="row header">
-      <h3>Need an easy way to connect your business with <%= link_to 'Public APIs', '/directory' %>?</h3>
+      <h3>Need an easy way to connect your business with <%= link_to 'Public APIs', '/directory', data: { no_turbolink: true } %>?</h3>
       <p>
         CenitSaaS is the perfect tool to help you out. <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Get in touch.</a>
       </p>
