improved blog and added terms of service

--- a/app/views/directory/index.html.erb
+++ b/app/views/directory/index.html.erb
@@ -44,7 +44,10 @@
       <div class="col-sm-9">
         <%= render partial: 'item', collection: @items %>
       </div>
+      
     </div>
+    <br />
+    All trademarks used on this site are the property of their respective owners, and no affiliation between them and Cenit, LLC. is expressed or implied.
   </div>
 </div>
 
