--- a/app/views/blog/mailchimp_integration.html.erb
+++ b/app/views/blog/mailchimp_integration.html.erb
@@ -33,11 +33,11 @@
 
             <h3>Building the integration</h3>
 
-            <p>1.To access to the tenant in CenitHub, you should do sign-in https://www.cenitsaas.com</p>
+            <p>1.To access to the tenant in CenitHub, you should do sign-in <%= linked_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %></p>
 
             <p>And then press the button data integrator, which prompted an username and password, remember if you are not registered, you can create a totally free account by Sign Up.</p>
 
-            <p>2. Will usually result in a redirect to cenithub.com, where we can see in Dashboard components previously installed.   Now, we go to the Shared Collection menu option and list the available integrations. Once it has been found MailChimp-1.0.0, we pull.</p> 
+            <p>2. Will usually result in a redirect to <%= linked_to 'cenithub.com', 'https://cenithub.com' %>, where we can see in Dashboard components previously installed.  Now, we go to the Shared Collection menu option and list the available integrations. Once it has been found MailChimp-1.0.0, we pull.</p> 
 
             <p>The parameters required to set up integration are:</p>
              
@@ -47,11 +47,11 @@
                <li>Service Node, which is obtained from the last character of the API Key.</li>
             </ul>
 
-            <p>To set up this service must have an active account with its corresponding active API Key in mailchimp.com.</p>
+            <p>To set up this service must have an active account with its corresponding active API Key in <%= linked_to 'mailchimp.com', 'https://mailchimp.com' %>.</p>
 
             <p>3. When we have successfully completed the Pull. The Dashboard shown in a group of objects that allow us to interact with the service. Schemas and Data Types.</p>
 
-            <p>4. The first step in our integration testing is,  initiate the Data Type. Only now we begin some like Folder, Member, Template, List, Campaign. </p>
+            <p>4. The first step in our integration testing is, initiate the Data Type. Only now we begin some like Folder, Member, Template, List, Campaign. </p>
 
             <p>5. On the left, you can see the Data Type that we have loaded upon which you can make a group of actions.</p>
 
@@ -67,9 +67,9 @@
 
             <p>11. To illustrate the interaction with MailChimp API through CenitHub , we will set the token required to use the CenitHub’s API . We create a new member and associate it with one of the existing lists.</p>
 
-            <p>12. We also have a set of actions that you can perform on the Data Type list , for example to obtain, create, update and delete a collection. If we execute  ‘delete’, we can see that the list is permanently removed from Mailchimp.</p>
+            <p>12. We also have a set of actions that you can perform on the Data Type list, for example to obtain, create, update and delete a collection. If we execute  ‘delete’, we can see that the list is permanently removed from Mailchimp.</p>
 
-            <p>13. We can also update the local data Type and the change is reflected in Mailchimp, because  has defined an event that looks at local changes corresponding to an update.</p>
+            <p>13. We can also update the local data Type and the change is reflected in Mailchimp, because has defined an event that looks at local changes corresponding to an update.</p>
 
             <p>14. Although in the Shared Collection has a set of flows, events and translators previus defined. The user can define new objects or also update existing as needed. For example, we define a new flow that allows us to create a folder.</p>
 
@@ -85,7 +85,7 @@
 
             <p>15. Create a new folder using the admin API and then we note that the new folder is created in Mailchimp too. Add to this new folder two files and when we synchronize the folders, notice that the number of file has been updated.</p>
 
-            <p>16. We are currently working on support to file upload through CenitHub. For more information, please contact us by www.cenitsaas.com or send us a message to the address email support@cenitsaas.com</p>
+            <p>16. We are currently working on support to file upload through CenitHub. For more information, please contact us by <%= linked_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %> or send us a message to the address email <a href="mailto:support@cenit.io" target="_top">support@cenit.io</a></p>
           </div>
 
         </div>
