--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,7 +11,7 @@
         <li><%= link_to 'Pricing', "#{root_path}#pricing", :class => 'item' %></li>
         <li><%= link_to 'Docs',ENV['DOC_URL'], :class => 'item', data: { no_turbolink: true } %></li>
         <li><%= link_to 'Blog', blog_index_path, :class => 'item', data: { no_turbolink: true } %></li>
-        <li><a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Contact Us</a><li>
+        <li><%= link_to 'Terms of service', '/terms_of_service', :class => 'item'%></li>
       </ul>
     </div>
     <div class="col-sm-2 col-lg-3  social">
