--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -12,6 +12,7 @@
   <%= link_to 'Pricing', "#{root_path}#pricing", :class => 'item' %>
   <%= link_to 'Docs',ENV['DOC_URL'], :class => 'item' %>
   <%= link_to 'Blog', blog_index_path, :class => 'item', data: { no_turbolink: true } %>
+  <%= link_to 'Terms of service', '/terms_of_service', :class => 'item'%>
   <% if current_user && current_user.has_role?(:admin) %>
     <%= link_to 'Applications', 'oauth/applications' %>
     <%= link_to 'Rails Admin', '/data' %>
