--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,18 +1,18 @@
 <nav class="nav-menu">
   <h3>Menu</h3>
-  <%= link_to 'CenitSaaS', "#{root_path}", :class => 'item' %>
+  <%= link_to 'CenitSaaS', "#{root_path}", :class => 'item', data: { no_turbolink: true }  %>
   <% if current_user.present? %>
-    <%= link_to 'Edit account', edit_user_registration_path %>
-    <%= link_to 'Profile', status_path(current_user.id), :class => 'item' %>
+    <%= link_to 'Edit account', edit_user_registration_path, :class => 'item', data: { no_turbolink: true }  %>
+    <%= link_to 'Profile', status_path(current_user.id), :class => 'item', data: { no_turbolink: true }  %>
   <% end %>
 
-  <%= link_to 'Data Integration', hub_path, :class => 'item' %>
-  <%= link_to 'ERP & CRM', "#{root_path}#services", :class => 'item' %>
+  <%= link_to 'Data Integration', hub_path, :class => 'item', :class => 'item' %>
+  <%= link_to 'ERP & CRM', "#{root_path}#services", :class => 'item', :class => 'item' %>
   <%= link_to 'App Directory', '/directory', :class => 'item', data: { no_turbolink: true } %>
-  <%= link_to 'Pricing', "#{root_path}#pricing", :class => 'item' %>
-  <%= link_to 'Docs',ENV['DOC_URL'], :class => 'item' %>
+  <%= link_to 'Pricing', "#{root_path}#pricing", :class => 'item', :class => 'item' %>
+  <%= link_to 'Docs',ENV['DOC_URL'], :class => 'item', :class => 'item' %>
   <%= link_to 'Blog', blog_index_path, :class => 'item', data: { no_turbolink: true } %>
-  <%= link_to 'Terms of service', '/terms_of_service', :class => 'item'%>
+  <%= link_to 'Terms of service', '/terms_of_service', :class => 'item', :class => 'item'%>
   <% if current_user && current_user.has_role?(:admin) %>
     <%= link_to 'Applications', 'oauth/applications' %>
     <%= link_to 'Rails Admin', '/data' %>
