improved home page

--- a/app/views/shared/_chart.html.erb
+++ b/app/views/shared/_chart.html.erb
@@ -3,10 +3,9 @@
     <div class="container">
       <div class="row header">
         <h3>Development Services for Custom Business Integration</h3>
-        <p>For some cases that you might also need</p>
-        <a data-toggle="modal" class="btn-signup button-clear" href="#contact_us" data-backdrop="false">
-          <span>Contact Us</span>
-        </a>
+        <p>
+          For some cases that you might also need. <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false"> Get in touch</a>
+        </p>
       </div>
       <div class="row">
         <div class="col-sm-12">
