--- a/app/assets/stylesheets/compiled/theme.scss
+++ b/app/assets/stylesheets/compiled/theme.scss
@@ -12,7 +12,11 @@
 a#sign-in-link, a#sign-out-link {
   font-size: 20px !important;
   border: solid 2px;
+//  border-color: white;
+  background-color: #ea7400;
+//  border-color: #ea7400;
   border-color: white;
+
   height: 10px;
   padding-top: 5px;
   padding-bottom: 28px;
@@ -21,7 +25,7 @@ a#sign-in-link, a#sign-out-link {
 }
 
 a#sign-in-link:hover, a#sign-out-link:hover  {
-  background-color: #ea7400;
+//  background-color: #ea7400;
   border-color: #ea7400;
   transition: .5s;
 }
