--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -12,8 +12,8 @@
              <%= link_to "ERP & CRM", cenitodoo_url(current_user, odoo_app), class: 'button button_erp' %>
            <% end %>
           <% else %>
-            <%= link_to 'Data Integrator', new_user_registration_path, class: 'button button_hub' %>
-            <%= link_to 'ERP & CRM', new_user_registration_path, class: 'button button_erp' %>
+            <%= link_to 'Data Integrator', new_user_session_path, class: 'button button_hub' %>
+            <%= link_to 'ERP & CRM', new_user_session_path, class: 'button button_erp' %>
           <% end %>
         </div>
         
@@ -59,17 +59,17 @@
         $(".st-container").removeClass("nav-effect");
       });
       
-      $(".button_hub").hover(
+      $(".temp-button_hub").hover(
         function() {
-          $( this )[0].text = 'Go to CenitHub'
+          $( this )[0].text = 'Cenit Hub'
         }, function() {
           $( this )[0].text = 'Data Integrator'
         }
       );
       
-      $(".button_erp").hover(
+      $(".temp-button_erp").hover(
         function() {
-          $( this )[0].text = 'Go to Odoo'
+          $( this )[0].text = 'Odoo SaaS'
         }, function() {
           $( this )[0].text = 'ERP & CRM'
         }
