--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
       </div>
       <span id='sign-in'>
         <% unless user_signed_in? %>
-          <%= link_to 'Free Sign Up', new_user_registration_path, class: 'navbar-brand demo pull-right', id: 'sign-in-link' %>
+          <%= link_to 'Free Sign Up', new_user_registration_path, class: 'navbar-brand demo pull-right', id: 'sign-in-link', style: 'background-color: #ea7400;' %>
         <% else %>
           <%= link_to "Sign out", destroy_user_session_path, class: 'navbar-brand demo pull-right', method: 'delete', id: 'sign-out-link' %>
         <% end %>
