--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
         <% unless user_signed_in? %>
           <%= link_to 'Free Sign Up', new_user_registration_path, class: 'navbar-brand demo pull-right', id: 'sign-in-link', style: 'background-color: #ea7400;' %>
         <% else %>
-          <%= link_to "Sign out", destroy_user_session_path, class: 'navbar-brand demo pull-right', method: 'delete', id: 'sign-out-link' %>
+          <%= link_to "Sign Out", destroy_user_session_path, class: 'navbar-brand demo pull-right', method: 'delete', id: 'sign-out-link' %>
         <% end %>
       </span>
     </div>
